--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.3.2
+Flask==3.1.2
 python-dotenv==1.0.0
 requests==2.31.0
-openai==1.0.0
+openai==2.6.1
 gunicorn==20.1.0
+google-generativeai>=0.8.3
