Setup basic database for registration/login and added routes protection

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,16 @@
 # Dev / runtime settings
-FLASK_APP=app.py
-FLASK_ENV=development
-PORT=5000
+FLASK_APP=
+FLASK_ENV=
+PORT=
 
 # Secrets - DO NOT COMMIT REAL VALUES
 OPENAI_API_KEY=
-PLACES_API_KEY=
-WEATHER_API_KEY=
+GEOAPIFY_API_KEY=
+GOOGLE_API_KEY=
+MONGO_URI=
+
+# temp for test
+SECRET_KEY=
 
 # Use mock (safe for team dev)
-MOCK=true
+MOCK=
