--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 # Dev / runtime settings
-FLASK_APP=
-FLASK_ENV=
-PORT=
+FLASK_APP=app.py
+FLASK_ENV=development
+PORT=500
 
 # Secrets - DO NOT COMMIT REAL VALUES
 OPENAI_API_KEY=
